Refactor NLQ processing to use decision-based responses and enhance bootRun configuration for debugging